[package]
name = "cult-buy"
version = "0.1.0"
authors = ["Zexa <zexa@cock.li>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
rusty-money = { version = "0.4.1", features = ["iso"] }
tempfile = "3.2.0"

