[package]
name = "cult-buy"
version = "0.1.0"
authors = ["Zexa <zexa@cock.li>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.2.0"
image = "0.23.14"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
fs_extra = "1.2.0"
sqlx = { version = "0.5", features = [ "runtime-async-std-rustls", "postgres", "macros", "migrate", "uuid", "chrono" ] }

